<resources>
    <string name="app_name">Barcode ScannerINV</string>
    <string name="loading_goods">loading goods...</string>
    <string name="inventory">Inventory</string>
    <string name="bill_in">Приход</string>
    <string name="bill_out">Расход</string>
    <string name="bill_move">Перемещение</string>
    <string name="write_off">Списание</string>
    <string name="goods">Goods</string>
    <string name="offline_mode">Offline mode</string>
    <string name="settings">Settings</string>
    <string name="about_app">quantity</string>
    <string name="inventory_list">Inventories list</string>
    <string name="bill_in_list">Накладные прихода:</string>
    <string name="bill">Receipt</string>
    <string name="num">N doc.</string>
    <string name="date">Date</string>
    <string name="subdivision">Subdivision</string>
    <string name="uah">$</string>
    <string name="search">Search</string>
    <string name="unit">unit</string>
    <string name="name">Name</string>
    <string name="Cnt">quantity</string>
    <string name="barc">barc</string>
    <string name="art">art.</string>
    <string name="articul">articul</string>
    <string name="barcode">barcode</string>
    <string name="price">price:</string>
    <string name="in_price">in price</string>
    <string name="out_price">розничная цена</string>
    <string name="dic_goods">Directory of goods</string>
    <string name="scan_parameters">scan parameters</string>
    <string name="scan_mode">scan mode</string>
    <string name="normal_scan">normal scan mode</string>
    <string name="plus_fact_cnt">add fact quanity</string>
    <string name="plus_one_position">add +1</string>
    <string name="connected">Подключено</string>
    <string name="connecting">Идет подключение к серверу...</string>
    <string name="no_connect_to_server">Error connecting to server</string>
    <string name="no_connect_to_database">Error connecting to database</string>
    <string name="saved">saved</string>
    <string name="labelled">noted</string>
    <string name="offline_work">Offline work</string>
    <string name="update_dic">Обновить справочники</string>
    <string name="clear_dic">Delete data</string>
    <string name="cnt_goods_on_server">Товаров на сервере:</string>
    <string name="cnt_goods_on_mobile">Count of goods on device</string>
    <string name="message">Message:</string>
    <string name="exist_acc">This document detected record. Specify the action you want to perform with them.</string>
    <string name="ignore">Cancel</string>
    <string name="clear">Delete entry</string>
    <string name="export_server">Send to server</string>
    <string name="export_file">Export...</string>
    <string name="ready">Done</string>
    <string name="success_send">Переданы все найденные изменения</string>
    <string name="error_send">При передаче возникли ошибки</string>
    <string name="export_count">Number of sent items</string>
    <string name="export_success">The file of inventory was created in folder /Barcode scanner/</string>
    <string name="export_error">Error writing file</string>
    <string name="error_connect">No network connection</string>
    <string name="retry">retry</string>
    <string name="delete">Delete</string>
    <string name="warning">Данное приложение Barcode ScannerINV является только сторонним дополнением к учетно-торговому программному комплексу , поэтому все вопросы и
        претензии по работе Barcode ScannerINV предъявлять ТОЛЬКО разработчику данного приложения по адресу, указанному ниже. Компания-производитель учетного ПО не несет никакой ответственности за приложение Barcode ScannerINV</string>
    <string name="about_app_head">Приложение Barcode ScannerINV предназначено для работы с базой учетного ПО (см. ссылку ниже) для проведения инвентаризации удаленно с помощью мобильного устройства.
    Программа может работать как с сопряженным bluetooth сканнером, так и использовать встроенную камеру.</string>
    <string name="info1">You can download the server files and necessary documentation the following link:</string>
    <string name="link1" translatable="false">https://drive.google.com/folderview?id=0B4SSWuz6QL-4elRrOEpGN2Q4b2s&amp;usp=sharing</string>
    <string name="info_email">E-mail developer:</string>
    <string name="email1" translatable="false">maestrovsmaster@gmail.com</string>
    <string name="email2" translatable="false">maestrovs@meta.ua</string>
    <string name="info_uns">You can download the accounting software the following link:</string>
    <string name="info_web" translatable="false">http://pos.in.ua/ru/products/view/programmnoye-obyespyechyeniye.html</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="quick_start">quick start</string>
    <string name="wellcome">Добро пожаловать в систему мобильного учета BarcodeScanner!<br></br>  Для настройки приложения следуйте  небольшой инструкции. </string>
    <string name="wellcome_choose">Wellocome to Mobile Inventory! How you want to use the application?</string>
    <string name="choose_1">Offline mode, like Portable data terminal (recommended)</string>
    <string name="choose_2">I have special software that is compatible with this application</string>
    <string name="keep_system">Inventory system</string>
    <string name="keep_system_details">Подготовьте учетное ПО, в котором ведется товарный учет. Акты переучета создаются в бек-офисе в соответствующем разделе. После создания акта, его необходимо
    заполнить, следуя инструкциям учетного ПО. Найти дистрибутив можно по адресу:
    </string>
    <string name="server_system">2.Сервер обмена</string>
    <string name="server_details" translatable="false">Установите на ПК сервер BarcodeServer , который будет выполнять обмен данными между учетным ПО и приложением на телефоне.
        Инструкцию и необходимые файлы по установке cервера вы можете найти по ссылке , указанной на странице данного приложения на GooglePlay
    </string>
    <string name="mobile_app">App Settings</string>
    <string name="mobile_details">Укажите IP адрес компьютера, на котором установлен BarcodeServer. Проверьте подключение WiFi, состояние
        сервера и доступность порта 8080 на компьютере.
    </string>
    <string name="scanner">Bluetooth scanner</string>
    <string name="scanner_details">You can use bluetooth scanner with your mobile phone</string>
    <string name="server_error" translatable="false">ошибка подключения к серверу.</string>
    <string name="db_version">версия базы данных </string>
    <string name="connect">Подключить </string>
    <string name="exit">Exit</string>
    <string name="descr_excel">To download product list, select your .CSV or  .XLS  file (Excel 97-2003).  Catalog file structure must conform to the following  pattern.</string>
    <string name="create_inventory">New inventory</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="delete_inventory_dialog">Are you sure you want to remove the inventory?</string>
    <string name="choose_file">Choose .XLS or .CSV file</string>
    <string name="count_of_scanned_goods">Number of items found</string>
    <string name="cant_open_file">Could not opened file</string>
    <string name="error">Error</string>
    <string name="tsd">Portable data terminal</string>
    <string name="tsd_description">Your phone may not work in Terminal mode data collection. To do this, download the phone excel (2003), a file with a list of nomenclature.  Next, create an inventory and carry out stocktaking. Using the menu to save the results of the rediscount rediscount in the phone and then copy the file to your PC.</string>
    <string name="import_xls">Import xls</string>
    <string name="query_jor_bill_in" translatable="false">
        select jb.id , jb.grp_id, jb.date_time, jb.is_return, jb.num, jb.supplier_num, jb.subdivision_id,
        (select ds.name from dic_subdivision ds  where ds.id = jb.subdivision_id ) as subdivision_name,
        jb.is_tax_in , jb.org_id , (select dr.name from dic_org dr where dr.id = jb.org_id) as ORGANIZATION,
        jb.employee_id , (select de.name  from dic_employee de  where de.id =jb.employee_id) as EMPLOYEE, jb.doc_state
        from jor_bill_in  jb order by jb.doc_state asc, jb.date_time desc
    </string>
    <string name="query_jor_bill_in_dt" translatable="false">
       select JT.ID,
       (select DG.ARTICLE
        from DIC_GOODS DG
        where DG.ID = JT.GOODS_ID) as ARTICLE,
        (select DG.ID
        from DIC_GOODS DG
        where DG.ID = JT.GOODS_ID) as GOOD_ID,
       (select DG.NAME
        from DIC_GOODS DG
        where DG.ID = JT.GOODS_ID) as NAME,
       (select (select DU.NAME
                from DIC_UNIT DU
                where DU.ID = DG.UNIT_ID) as UNIT
        from DIC_GOODS DG
        where DG.ID = JT.GOODS_ID), JT.CNT, JT.PRICE
    from JOR_BILL_IN_DT JT
    where JT.HD_ID =
        </string>
    <string name="work_autonom_mode">Вы работаете в автономном режиме</string>
    <string name="attention">Attention!</string>
    <string name="ip_address_server">IP address of server</string>
    <string name="good_not_found_create">Nothing found. Create a new record?</string>
    <string name="sht">piece</string>
    <string name="kg">kg</string>
    <string name="but">bottle</string>
    <string name="create_new_good">Add a new product?</string>
    <string name="no_ask_more">Do not ask me to create a good again</string>
    <string name="not_create_new_good">not added new good</string>
    <string name="catalog_of_goods">Catalog of goods</string>
    <string name="list_of_goods">List of goods</string>
    <string name="export_to_xls">Export inventory to excel</string>
    <string name="settings_inventory">Inventory settings</string>
    <string name="settings_input_method">Keyboard and input settings</string>
    <string name="delete_inventory">Delete inventory</string>
    <string name="import_to_xls">import_to_xls</string>
    <string name="keyboard_settings">Input methods settings</string>
    <string name="name_or_barc">name or barcode</string>
    <string name="import_from_excel">Import goods from file</string>
    <string name="rate_this_app">Rate This App</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="back_to_invs_list">Back to inventories</string>
    <string name="adding_of_new_good">Adding a new product</string>
    <string name="article_search">search only  article</string>
    <string name="title_activity_main">Inventory</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
</resources>