<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:paddingTop="20dp">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/indigo_100"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/create_inventory"
        android:textSize="18sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num"
        android:inputType="number" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subdivision" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <Button
            android:id="@+id/cancelBt"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"

            android:textAllCaps="false" />

        <Button
            android:id="@+id/createBt"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/green"
            />
    </LinearLayout>

</LinearLayout>