<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:text="@string/adding_of_new_good"
        android:id="@+id/textView6"
        android:textColor="@color/dark_gray"
        android:gravity="center_horizontal|center_vertical"
        android:padding="12dp"
        android:visibility="visible"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/barcode"
        android:textColor="@color/dark_gray"
        android:gravity="left|center_vertical"
        android:padding="4dp"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/barcodeET"
        android:hint="@string/barcode"
        android:textColorHint="@color/red_70"
        android:textColor="@color/indigo_900"
        android:textSize="24sp"
        android:background="@drawable/indigo_stroke"
        android:paddingLeft="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/name"
        android:textColor="@color/dark_gray"
        android:gravity="left|center_vertical"
        android:padding="4dp"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameET"
        android:hint="@string/name"
        android:textColorHint="@color/red_70"
        android:textColor="@color/indigo_900"
        android:textSize="24sp"
        android:background="@drawable/indigo_stroke"
        android:paddingLeft="6dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/unit"
        android:textColor="@color/dark_gray"
        android:gravity="left|center_vertical"
        android:padding="4dp"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unitSpinner"
            android:background="@drawable/indigo_stroke" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editUnit"
            android:layout_toLeftOf="@+id/okUnitBt"
            android:visibility="gone" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/okUnitBt"
            android:layout_alignParentRight="true"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelGood"
            android:layout_weight="1"
            android:background="@drawable/indigo_red_button"
            android:layout_margin="2dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/createGood"
            android:layout_weight="1"
            android:background="@drawable/indigo_green_dark_button"
            android:layout_margin="2dp" />

    </LinearLayout>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:text="@string/no_ask_more"
        android:id="@+id/notAskMore" />
</LinearLayout>