<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo_100_a50">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/typeCntRelLayout"
                android:layout_below="@+id/cntRelLayout"
                android:layout_above="@+id/applyLinLayout"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_mode"
                    android:id="@+id/scanmodeLb"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/scanmodeLb"
                    android:layout_marginTop="4dp"
                    android:id="@+id/scanModeRadioGroup">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal_scan"
                        android:id="@+id/normalScanButton"
                        android:enabled="true"
                        android:checked="true"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus_fact_cnt"
                        android:id="@+id/plusFactScanButton"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus_one_position"
                        android:id="@+id/plusOneScanButton"
                        android:textSize="14sp" />
                </RadioGroup>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>