<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/indigo_500" >

        <ImageButton
            android:id="@+id/settingsBackBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/indigo_500"
            android:src="@drawable/ic_keyboard_arrow_left_white_36dp" />

        <TextView
            android:id="@+id/userDRewsCNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/offline_work"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/offlineIcon"
            android:src="@drawable/ic_phonelink_off_white_36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="12dp"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/indigo_50"
        android:paddingBottom="0dp"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode"
            android:id="@+id/checkOffline"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_dic"
            android:id="@+id/importBt"
            android:layout_below="@+id/checkOffline"
            android:background="@drawable/indigo_100_a50_button"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/ic_import_export_black_36dp"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_dic"
            android:id="@+id/clearBt"
            android:layout_below="@+id/importBt"
            android:background="@drawable/indigo_100_a50_button"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/ic_delete_black_36dp"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cnt_goods_on_mobile"
            android:id="@+id/mobileCntLb"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/clearBt"
            android:layout_marginLeft="36dp"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/mobileGoodsCnt"
            android:layout_alignTop="@+id/mobileCntLb"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:textColor="@color/green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cnt_goods_on_server"
            android:id="@+id/serverCntLb"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/mobileCntLb"
            android:layout_alignLeft="@+id/mobileCntLb"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/serverGoodsCnt"
            android:layout_alignTop="@+id/serverCntLb"
            android:layout_alignParentRight="true"
            android:textSize="16dp"
            android:textColor="@color/navy" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_create_new_good"
            android:id="@+id/noCreateGoodcheckBox"
            android:layout_below="@+id/serverGoodsCnt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/updateProgress"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/mobileCntLb"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp" />


    </RelativeLayout>

</LinearLayout>