<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/indigo_500" >

        <ImageButton
            android:id="@+id/settingsBackBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/indigo_500"
            android:src="@drawable/ic_keyboard_arrow_left_white_36dp" />

        <TextView
            android:id="@+id/userDRewsCNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/import_xls"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr_excel"
            android:id="@+id/textView3"
            android:padding="10dp"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:id="@+id/imageView"
            android:src="@drawable/example_excel_en"
            android:layout_margin="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_file"
            android:id="@+id/chooseFileBt"
            android:background="@drawable/blue_button"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_dic"
            android:id="@+id/clearGoodsBt"
            android:background="@drawable/indigo_red_button"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_of_scanned_goods"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/countOfGoods"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBarMyShelf" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionBarMyShelf"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/indigo_100_a50">
    </ListView>

</LinearLayout>